--- a/Mod3 backend/demofirstSpringapp/pom.xml
+++ b/Mod3 backend/demofirstSpringapp/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.first.Springapp</groupId>
-	<artifactId>firstSpringapp</artifactId>
+	<artifactId>demofirstSpringapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>mySpringBootApp</name>
 	<description>Demo project for Spring Boot</description>
