--- a/Mod3 backend/demofirstSpringapp/src/main/resources/application.properties
+++ b/Mod3 backend/demofirstSpringapp/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 
 
-### PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/Employee
+### PostgreSQL  Employee
+spring.datasource.url=jdbc:postgresql://localhost:5432/Joke
 spring.datasource.username=student_ma109
 spring.datasource.password=cool
 spring.datasource.driver-class-name=org.postgresql.Driver
